--- a/events.html
+++ b/events.html
@@ -24,35 +24,36 @@
 
     <div class="container-fluid containerplus">
       <div class="row">
-        <div class= "col-md-4">
-          <a href="home.html"><img src="Logo.png" class="logo">
-          </a></img>
+        <div class= "col-xs-12 col-md-4">
+          <a href="home.html"><img src="Logo.png" class="logo"></a>
         </div>
 
-        <div class="col-xs-1 col-md-1 col-xs-offset-10 topIcon"style="margin-top:33px;">
-          <div><a href=https://www.facebook.com/>
-          <img src = "facebook.png" height="40px" width="40px"></a></div>
-        </div>
+        <div class="hidden-xs col-md-2 col-md-offset-6">
+          <div class="col-xs-3 col-md-1 topIcon" style="margin-top:35px">
+            <div><a href=https://www.facebook.com/>
+            <img src = "facebook.png" height="40px" width="40px"></a></div>
+          </div>
 
-        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:35px">
+        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
           <div><a href=https://www.twitter.com/>
           <img src = "twitter.png" height="35px" width="35px"></a></div>
         </div>
 
-        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:35px">
+        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
           <div><a href=https://www.google.com/>
           <img src = "google.png" height="35px" width="35px"></a></div>
         </div>
 
-        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:33px">
+        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:33px">
           <div><a href=https://www.instagram.com/>
           <img src = "instagram.png" height="39px" width="39px"></a></div>
         </div>
 
-        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:35px">
+        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
           <div><a href=https://www.youtube.com/>
           <img src = "youtube.png" height="35px" width="35px"></a></div>
         </div>
+      </div>
 
       </div>
     </div>
@@ -125,69 +126,67 @@
       </div>
     </div>
 
-  <div class="container-fluid footer">
-    <div class ="row">
-      <div class ="col-md-3">
-        <ul class ="ul">
-          <li><img src="FooterLogo.png" class="footerLogo"></img></li>
-          <li class = "footerText">&copy 2018 Jinjang Literacy Project</li>
-        </ul>
-      </div>
+    <div class="container-fluid footer">
+      <div class ="row">
+        <div class ="col-xs-12 col-md-3">
+          <ul class ="ul">
+            <li><img src="FooterLogo.png" class="footerLogo"></img></li>
+            <li class = "footerText">&copy 2018 Jinjang Literacy Project</li>
+          </ul>
+        </div>
 
-      <div class ="col-md-3 contact">
-        <ul class = "ul">
-          <br><li class = "footerText">Contact Us</li><br><br>
-          <li><span class="fa fa-phone"></span> +852 12345678</li>
-          <li><span class="fa fa-fax"></span> +852 87654321</li>
-          <li><span class="fa fa-envelope"></span><a href="#"> help@edu.my</a></li>
+        <div class ="col-xs-12 col-md-3 contact">
+          <ul class = "ul">
+            <br><li class = "footerText">Contact Us</li><br><br>
+            <li><span class="fa fa-phone"></span> +852 12345678</li>
+            <li><span class="fa fa-fax"></span> +852 87654321</li>
+            <li><span class="fa fa-envelope"></span><a href="#"> help@edu.my</a></li>
 
-          <br><li class = "footerText">Connect With Us</li>
-          <li>
-            <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px;">
-            <div><a href=https://www.facebook.com/>
-              <img src = "facebook.png" height="35px" width="35px"></a></div>
-            </div>
+            <br><li class = "footerText">Connect With Us</li>
+            <li>
+              <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px;">
+              <div><a href=https://www.facebook.com/>
+                <img src = "facebook.png" height="35px" width="35px"></a></div>
+              </div>
 
-            <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
-              <div><a href=https://www.twitter.com/>
-              <img src = "twitter.png" height="30px" width="30px"></a></div>
-            </div>
+              <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
+                <div><a href=https://www.twitter.com/>
+                <img src = "twitter.png" height="30px" width="30px"></a></div>
+              </div>
 
-            <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
-              <div><a href=https://www.google.com/>
-              <img src = "google.png" height="30px" width="30px"></a></div>
-            </div>
+              <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
+                <div><a href=https://www.google.com/>
+                <img src = "google.png" height="30px" width="30px"></a></div>
+              </div>
 
-            <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px">
-              <div><a href=https://www.instagram.com/>
-              <img src = "instagram.png" height="34px" width="34px"></a></div>
-            </div>
+              <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px">
+                <div><a href=https://www.instagram.com/>
+                <img src = "instagram.png" height="34px" width="34px"></a></div>
+              </div>
 
-            <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
-              <div><a href=https://www.youtube.com/>
-              <img src = "youtube.png" height="30px" width="30px"></a></div>
-            </div>
-          </li>
-        </ul>
-      </div>
+              <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
+                <div><a href=https://www.youtube.com/>
+                <img src = "youtube.png" height="30px" width="30px"></a></div>
+              </div>
+            </li>
+          </ul>
+        </div>
 
-      <div class ="col-md-3">
-        <ul class = "ul">
-          <li class="footerText" style="margin-top:35px;">Sponsored By</li>
-          <li><img src = "HELPLogo.png" class = "HELPLogo"></img></li>
-        </ul>
-      </div>
+        <div class ="col-xs-12 col-md-3">
+          <ul class = "ul">
+            <li class="footerText" style="margin-top:35px;">Sponsored By</li>
+            <li><img src = "HELPLogo.png" class = "HELPLogo"></li>
+          </ul>
+        </div>
 
-      <div class ="col-md-3">
-        <img src = "AGNLogo.png" class = "AGNLogo"></img>
+        <div class ="col-xs-12 col-md-3">
+          <ul class = "ul">
+            <li><img src = "AGNLogo.png" class = "AGNLogo"></li>
+          </ul>
+        </div>
+
       </div>
     </div>
-
-    </div>
-
-  </div>
-
-  </div>
 
   </body>
 
