--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
           <a href="home.html"><img src="Logo.png" class="logo"></a>
         </div>
 
-        <div class="col-xs-12 col-md-2 col-md-offset-6">
+        <div class="hidden-xs col-md-2 col-md-offset-6">
           <div class="col-xs-3 col-md-1 topIcon" style="margin-top:35px">
             <div><a href=https://www.facebook.com/>
             <img src = "facebook.png" height="40px" width="40px"></a></div>
@@ -58,26 +58,21 @@
       </div>
     </div>
 
-    <div class="container-fluid">
-      <div class ="row">
-        <div class = "col-xs-12 col-md-12">
-          <nav class="navbar navbar-custom" data-spy="affix" data-offset-top="350">
-            <ul class ="nav navbar-nav">
-              <li class = "active"><a href="home.html">HOME</a></li>
-              <li><a href="aboutUs.html">ABOUT US</a></li>
-              <li><a href="events.html">EVENTS</a></li>
-              <li><a href="donate.html">DONATE</a></li>
-              <li><a href="joinUs.html">JOIN US</a></li>
-              <li><a href="login.html">LOGIN</a></li>
-            </ul>
-          </nav>
-      </div>
-    </div>
-  </div>
+
+    <nav class="navbar navbar-custom" data-spy="affix" data-offset-top="350">
+      <ul class ="nav navbar-nav">
+        <li class = "active"><a href="home.html">HOME</a></li>
+        <li><a href="aboutUs.html">ABOUT US</a></li>
+        <li><a href="events.html">EVENTS</a></li>
+        <li><a href="donate.html">DONATE</a></li>
+        <li><a href="joinUs.html">JOIN US</a></li>
+        <li><a href="login.html">LOGIN</a></li>
+      </ul>
+    </nav>
 
     <div class="container-fluid">
       <div class ="row">
-        <div class = "col-md-12">
+        <div class = "col-xs-12 col-md-12">
           <h3 class = "title">Impact a Life, Transform a Community</h3>
         </div>
       </div>
@@ -85,7 +80,7 @@
 
     <div class="container-fluid">
       <div class ="row">
-        <div class = "col-md-6 col-md-offset-3">
+        <div class = "col-xs-12 col-md-6 col-md-offset-3">
           <img src="home.jpg" class ="homePic">
         </div>
       </div>
@@ -132,14 +127,14 @@
 
   <div class="container-fluid footer">
     <div class ="row">
-      <div class ="col-md-3">
+      <div class ="col-xs-12 col-md-3">
         <ul class ="ul">
           <li><img src="FooterLogo.png" class="footerLogo"></img></li>
           <li class = "footerText">&copy 2018 Jinjang Literacy Project</li>
         </ul>
       </div>
 
-      <div class ="col-md-3 contact">
+      <div class ="col-xs-12 col-md-3 contact">
         <ul class = "ul">
           <br><li class = "footerText">Contact Us</li><br><br>
           <li><span class="fa fa-phone"></span> +852 12345678</li>
@@ -176,17 +171,18 @@
         </ul>
       </div>
 
-      <div class ="col-md-3">
+      <div class ="col-xs-12 col-md-3">
         <ul class = "ul">
           <li class="footerText" style="margin-top:35px;">Sponsored By</li>
-          <li><img src = "HELPLogo.png" class = "HELPLogo"></img></li>
+          <li><img src = "HELPLogo.png" class = "HELPLogo"></li>
         </ul>
       </div>
 
-      <div class ="col-md-3">
-        <img src = "AGNLogo.png" class = "AGNLogo"></img>
+      <div class ="col-xs-12 col-md-3">
+        <ul class = "ul">
+          <li><img src = "AGNLogo.png" class = "AGNLogo"></li>
+        </ul>
       </div>
-
 
     </div>
   </div>
