--- a/aboutUs.html
+++ b/aboutUs.html
@@ -27,34 +27,6 @@
         <div class= "col-xs-12 col-md-4">
           <a href="home.html"><img src="Logo.png" class="logo"></a>
         </div>
-
-        <div class="hidden-xs col-md-2 col-md-offset-6">
-          <div class="col-xs-3 col-md-1 topIcon" style="margin-top:35px">
-            <div><a href=https://www.facebook.com/>
-            <img src = "facebook.png" height="40px" width="40px"></a></div>
-          </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.twitter.com/>
-          <img src = "twitter.png" height="35px" width="35px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.google.com/>
-          <img src = "google.png" height="35px" width="35px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:33px">
-          <div><a href=https://www.instagram.com/>
-          <img src = "instagram.png" height="39px" width="39px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.youtube.com/>
-          <img src = "youtube.png" height="35px" width="35px"></a></div>
-        </div>
-      </div>
-
       </div>
     </div>
 
@@ -64,7 +36,7 @@
         <li class = "active"><a href="aboutUs.html">ABOUT US</a></li>
         <li><a href="events.html">EVENTS</a></li>
         <li><a href="donate.html">DONATION</a></li>
-        <li><a href="joinUs.html">JOIN US</a></li>
+        <li><a href="joinUs.html">VOLUNTEER</a></li>
         <li><a href="login.html">LOGIN</a></li>
       </ul>
     </nav>
@@ -87,7 +59,7 @@
 
     <hr class = "line">
       <div class="row" style = "margin-bottom:50px;margin-left:80px">
-        <div class="col-xs-12 col-md-5">
+        <div class="col-xs-11 col-md-5">
           <h1 class = "aboutUs">Our Vision</h1>
 
           <h4>To help the underprivileged children of Jinjang community
@@ -96,7 +68,7 @@
 
         <div class="col-xs-8 col-md-5">
           <img src="vision.jpg" class="img-fluid" alt="Responsive image"
-          height="350px" width="100%" style="margin-left:45px">
+          height="350px" width="100%">
         </div>
       </div>
 
@@ -109,7 +81,7 @@
           height="230px" width="100%">
         </div>
 
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-11 col-md-6">
           <h1 class = "aboutUs">Our Sponsors</h1>
 
           <h3 class = "aboutUs">HELP University</h3>
@@ -129,7 +101,7 @@
 
     <div class="container-fluid footer">
       <div class ="row">
-        <div class ="col-xs-12 col-md-3">
+        <div class ="col-xs-11 col-md-3">
           <ul class ="ul">
             <li><img src="FooterLogo.png" class="footerLogo"></img></li>
             <li class = "footerText">&copy 2018 Jinjang Literacy Project</li>
