--- a/events.html
+++ b/events.html
@@ -27,34 +27,6 @@
         <div class= "col-xs-12 col-md-4">
           <a href="home.html"><img src="Logo.png" class="logo"></a>
         </div>
-
-        <div class="hidden-xs col-md-2 col-md-offset-6">
-          <div class="col-xs-3 col-md-1 topIcon" style="margin-top:35px">
-            <div><a href=https://www.facebook.com/>
-            <img src = "facebook.png" height="40px" width="40px"></a></div>
-          </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.twitter.com/>
-          <img src = "twitter.png" height="35px" width="35px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.google.com/>
-          <img src = "google.png" height="35px" width="35px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:33px">
-          <div><a href=https://www.instagram.com/>
-          <img src = "instagram.png" height="39px" width="39px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.youtube.com/>
-          <img src = "youtube.png" height="35px" width="35px"></a></div>
-        </div>
-      </div>
-
       </div>
     </div>
 
@@ -64,18 +36,19 @@
         <li><a href="aboutUs.html">ABOUT US</a></li>
         <li class = "active"><a href="events.html">EVENTS</a></li>
         <li><a href="donate.html">DONATION</a></li>
-        <li><a href="joinUs.html">JOIN US</a></li>
+        <li><a href="joinUs.html">VOLUNTEER</a></li>
         <li><a href="login.html">LOGIN</a></li>
       </ul>
     </nav>
 
     <div class="container-fluid">
       <div class="row" style = "margin-bottom:50px;margin-left:80px;">
-        <div class="col-md-5">
-          <img src="mission.jpg" height="350px">
+        <div class="col-xs-8 col-md-5">
+          <img src="mission.jpg" class="img-fluid" alt="Responsive image"
+          height="350px" width="100%">
         </div>
 
-        <div class="col-md-6">
+        <div class="col-xs-11 col-md-6">
           <h1 class = "aboutUs">Event 1</h1>
 
           <h4>Date: 14/3/2018<br><br>
@@ -89,8 +62,13 @@
       </div>
 
     <hr class = "line">
-      <div class="row" style = "margin-bottom:50px;margin-left:90px">
-        <div class="col-md-6">
+      <div class="row" style = "margin-bottom:50px;margin-left:80px">
+        <div class="col-xs-8 col-md-5">
+          <img src="vision.jpg" class="img-fluid" alt="Responsive image"
+          height="350px" width="100%">
+        </div>
+
+        <div class="col-xs-11 col-md-6">
           <h1 class = "aboutUs">Event 2</h1>
 
           <h4>Date: 14/3/2018<br><br>
@@ -101,18 +79,17 @@
           </h4>
         </div>
 
-        <div class="col-md-5">
-          <img src="vision.jpg" height="350px" style="margin-left:45px">
-        </div>
+
       </div>
 
     <hr class = "line">
       <div class="row" style = "margin-bottom:50px;margin-left:80px;">
-        <div class="col-md-5">
-          <img src="event.jpg" height="350px" style="margin-bottom:40px;">
+        <div class="col-xs-8 col-md-5">
+          <img src="event.jpg" class="img-fluid" alt="Responsive image"
+          height="350px" width="100%">
         </div>
 
-        <div class="col-md-6">
+        <div class="col-xs-11 col-md-6">
           <h1 class = "aboutUs">Event 3</h1>
 
           <h4>Date: 14/3/2018<br><br>
