--- a/home.html
+++ b/home.html
@@ -27,34 +27,6 @@
         <div class= "col-xs-12 col-md-4">
           <a href="home.html"><img src="Logo.png" class="logo"></a>
         </div>
-
-        <div class="hidden-xs col-md-2 col-md-offset-6">
-          <div class="col-xs-3 col-md-1 topIcon" style="margin-top:35px">
-            <div><a href=https://www.facebook.com/>
-            <img src = "facebook.png" height="40px" width="40px"></a></div>
-          </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.twitter.com/>
-          <img src = "twitter.png" height="35px" width="35px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.google.com/>
-          <img src = "google.png" height="35px" width="35px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:33px">
-          <div><a href=https://www.instagram.com/>
-          <img src = "instagram.png" height="39px" width="39px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.youtube.com/>
-          <img src = "youtube.png" height="35px" width="35px"></a></div>
-        </div>
-      </div>
-
       </div>
     </div>
 
@@ -65,7 +37,7 @@
         <li><a href="aboutUs.html">ABOUT US</a></li>
         <li><a href="events.html">EVENTS</a></li>
         <li><a href="donate.html">DONATION</a></li>
-        <li><a href="joinUs.html">JOIN US</a></li>
+        <li><a href="joinUs.html">VOLUNTEER</a></li>
         <li><a href="login.html">LOGIN</a></li>
       </ul>
     </nav>
@@ -93,11 +65,11 @@
           <h3 class = "homeBarfont">CHARITY BEGINS AT HOME BUT SHOULD NOT END THERE<h3>
         </div>
 
-        <div class = "col-md-3 col-md-offset-1">
+        <div class = "col-xs-4 col-xs-offset-2 col-md-3 col-md-offset-1">
           <a href = "JoinUs.html"><button class="homeBarBtn">VOLUNTEER</button></a>
         </div>
 
-        <div class = "col-md-3">
+        <div class = "col-xs-6 col-md-3">
           <a href = "donate.html"><button class="homeBarBtn">DONATION</button></a>
         </div>
       </div>
@@ -105,7 +77,7 @@
 
     <div class="container-fluid homeBar2">
       <div class ="row">
-        <div class = "col-md-5 col-md-offset-1">
+        <div class = "col-xs-12 col-md-5 col-md-offset-1">
           <h3 class="aboutJinjangTitle">The Children in Jinjang</h3>
           <h5 class = "aboutJinjang">The children in Jinjang Utara have been
             growing up in a poverty stricken environment. Some were abandoned by
@@ -118,8 +90,8 @@
           <a href="jinjangStory.html"><button class ="readMoreBtn">Read More</button></a>
         </div>
 
-        <div class = "col-md-5 col-md-offset-1">
-          <img src="event.jpg" height="400px;">
+        <div class = "col-xs-8 col-md-5 col-md-offset-1">
+          <img src="event.jpg" class="img-fluid" alt="Responsive image" height="400px" width="100%">
         </div>
 
     </div>
