--- a/login.html
+++ b/login.html
@@ -27,34 +27,6 @@
         <div class= "col-xs-12 col-md-4">
           <a href="home.html"><img src="Logo.png" class="logo"></a>
         </div>
-
-        <div class="hidden-xs col-md-2 col-md-offset-6">
-          <div class="col-xs-3 col-md-1 topIcon" style="margin-top:35px">
-            <div><a href=https://www.facebook.com/>
-            <img src = "facebook.png" height="40px" width="40px"></a></div>
-          </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.twitter.com/>
-          <img src = "twitter.png" height="35px" width="35px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.google.com/>
-          <img src = "google.png" height="35px" width="35px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:33px">
-          <div><a href=https://www.instagram.com/>
-          <img src = "instagram.png" height="39px" width="39px"></a></div>
-        </div>
-
-        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
-          <div><a href=https://www.youtube.com/>
-          <img src = "youtube.png" height="35px" width="35px"></a></div>
-        </div>
-      </div>
-
       </div>
     </div>
 
@@ -64,14 +36,14 @@
         <li><a href="aboutUs.html">ABOUT US</a></li>
         <li><a href="events.html">EVENTS</a></li>
         <li><a href="donate.html">DONATION</a></li>
-        <li><a href="joinUs.html">JOIN US</a></li>
+        <li><a href="joinUs.html">VOLUNTEER</a></li>
         <li class = "active"><a href="login.html">LOGIN</a></li>
       </ul>
     </nav>
 
     <div class="container-fluid">
       <div class = "row">
-        <div class="col-xs-12 col-md-5 col-md-offset-3 login">
+        <div class="col-xs-offset-2 col-xs-8 col-md-5 col-md-offset-3 login">
           <h1 class = "loginText">LOGIN</h1>
           <input type="text" name="username" class="form form-control input-lg"
           placeholder="USERNAME" style = "margin-top:60px;">
